made modifications for mobile

--- a/new-vite-app/package.json
+++ b/new-vite-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/malikDev2/compsci_site",
+  "homepage": "https://malikdev2.github.io/compsci_site",
 
   "name": "new-vite-app",
   "private": true,
